Tuesday July 30th

--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,25 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css"/>
+    <title>Document</title>
+</head>
+<body>
+    <div class="containerOne">
+        <div class="purpleBox"></div>
+        <div class="greenBox"></div>
+        <div class="clircle"></div>
+    </div>
+   
+    <div class="containerTwo">
+        <div class="yellowBox"></div>
+    </div>
+   
+    <div class="containerThree">
+        <div class="text">HELLO FRIENDS</div>
+    </div>
+</body>
+</html>
