--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,17 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+<body>
+    <header class="header"></header>
+    <div class="div1"></div>
+    <div class="div2"></div>
+    <footer class="div3"></footer>
+
+</body>
+</html>
