--- a/second/index.html
+++ b/second/index.html
@@ -11,7 +11,7 @@
     <div class="containerOne">
         <div class="purpleBox"></div>
         <div class="greenBox"></div>
-        <div class="clircle"></div>
+        <div class="circle"></div>
     </div>
    
     <div class="containerTwo">
@@ -19,7 +19,7 @@
     </div>
    
     <div class="containerThree">
-        <div class="text">HELLO FRIENDS</div>
+        <h1 class="text">HELLO FRIENDS</h1>
     </div>
 </body>
 </html>
