--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,30 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css"/>
+    <title>Document</title>
+</head>
+<body>
+    <header class="grayBox">
+        <div class="blueBox"></div>
+    </header>
+
+    <div class="text">
+        <p>
+            Consider hiding the status bar - and all other app UI - while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap. Unless you have a complelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+        </p>
+    </div>
+
+    <div class="blue"></div>
+
+    <div class="teal"></div>
+
+    <div class="lime"></div>
+
+    <div class="yellow"></div>
+
+</body>
+</html>
